feat(auth) add protected endpoint - create me endpoint - add logger middlewares
